crates/nexus-macros/tests/macro_compile_fail/aggregate_missing_error.stderr
error: `error` is required
  --> tests/macro_compile_fail/aggregate_missing_error.rs:32:8
   |
32 | struct MissingError;
   |        ^^^^^^^^^^^^
